src/objects/Demo_Request__c.object
<CustomObject>
    <description>Associated to the Opportunity to allow users to request demos, AV equipment, Marketing info for their opportunities</description>
    <fields>
        <fullName>AV_Needed_Date__c</fullName>
        <label>AV Needed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AV_Needed_Time_Zone__c</fullName>
        <label>AV Needed Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AV_Needed_Time__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>EDT</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>CDT</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
                <value>
                    <fullName>MDT</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>PDT</fullName>
                </value>
                <value>
                    <fullName>AKST</fullName>
                </value>
                <value>
                    <fullName>AKDT</fullName>
                </value>
                <value>
                    <fullName>HAST</fullName>
                </value>
                <value>
                    <fullName>HADT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AV_Needed_Time__c</fullName>
        <label>AV Needed Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AV_Pickup_Date__c</fullName>
        <inlineHelpText>If you want the AV company to tear down the screens, someone must be available in the room when the company arrives. If pickup is at or after 5pm, especially for govt buildings, make sure access is allowed after 5.</inlineHelpText>
        <label>AV Pickup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AV_Pickup_Time_Zone__c</fullName>
        <label>AV Pickup Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AV_Pickup_Time__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>EDT</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>CDT</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
                <value>
                    <fullName>MDT</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>PDT</fullName>
                </value>
                <value>
                    <fullName>AKST</fullName>
                </value>
                <value>
                    <fullName>AKDT</fullName>
                </value>
                <value>
                    <fullName>HAST</fullName>
                </value>
                <value>
                    <fullName>HADT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AV_Pickup_Time__c</fullName>
        <label>AV Pickup Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AV_REQUEST_COMPLETE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AV REQUEST COMPLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Agency_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Agency 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Demo Requests</relationshipLabel>
        <relationshipName>Demo_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Agency_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Agency 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Demo Requests (Additional Agency 2)</relationshipLabel>
        <relationshipName>Demo_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Agency_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Agency 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Demo Requests (Additional Agency 3)</relationshipLabel>
        <relationshipName>Demo_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Attendee_1_Role__c</fullName>
        <description>Please enter what the role of this attendee is at the demo (Executive Sponsor, Sales Manger, etc.)</description>
        <label>Additional Attendee 1 Role</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Attendee_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Attendee 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demo_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Attendee_2_Role__c</fullName>
        <label>Additional Attendee 2 Role</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Attendee_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Attendee 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demo_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Attendee_3_Role__c</fullName>
        <label>Additional Attendee 3 Role</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Attendee_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Attendee 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demo_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Information_Required__c</fullName>
        <label>Additional Information Required</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agency_Types_Involved__c</fullName>
        <label>Agency Types Involved</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Fire</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_Additional_Agencies_Involved__c</fullName>
        <inlineHelpText>If this is a multi-agency, then you must enter the &quot;Additional Agency&quot; information</inlineHelpText>
        <label>Are Additional Agencies Involved?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No, this is a single agency demo</fullName>
                </value>
                <value>
                    <fullName>Yes, this is a multi-agency demo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Access_Information__c</fullName>
        <label>Building Access Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Building_Access_Information_for_Caterer__c</fullName>
        <description>Building Access Information for Caterer</description>
        <label>Building Access Information for Caterer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Building_access_information_for_Vendor__c</fullName>
        <description>Building access information for the vendor</description>
        <label>Building Access Information for Vendor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CAD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Catering_Needs__c</fullName>
        <description>This is where you enter specific needs for Food and Drink.</description>
        <label>Catering Needs/Quantity</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Catering_Request_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Catering request complete check box</description>
        <label>CATERING REQUEST COMPLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Organization_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client/Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Opportunity_Type__c</fullName>
        <formula>Opportunity__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Opportunity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Forms_From_Agency__c</fullName>
        <inlineHelpText>Attach agency versions of forms to this request</inlineHelpText>
        <label>Custom Forms From Agency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DEMO_REQUEST_COMPLETE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DEMO REQUEST COMPLETE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Booklets_Quantity__c</fullName>
        <inlineHelpText>If Demo Booklets are required, you must enter a quantity</inlineHelpText>
        <label>Demo Booklets Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Demo_Booklets__c</fullName>
        <inlineHelpText>Must submit a CMR form separately</inlineHelpText>
        <label>Demo Booklets?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Contact_Phone__c</fullName>
        <label>Demo Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Demo_Contact__c</fullName>
        <label>Demo Contact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Dates__c</fullName>
        <description>demo dates for date ranges</description>
        <inlineHelpText>Add Demo Date range here</inlineHelpText>
        <label>Demo Dates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Demo_End_Date__c</fullName>
        <label>Demo End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_End_Time_Zone__c</fullName>
        <label>Demo End Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Demo_End_Time__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>EDT</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>CDT</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
                <value>
                    <fullName>MDT</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>PDT</fullName>
                </value>
                <value>
                    <fullName>AKST</fullName>
                </value>
                <value>
                    <fullName>AKDT</fullName>
                </value>
                <value>
                    <fullName>HAST</fullName>
                </value>
                <value>
                    <fullName>HADT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_End_Time__c</fullName>
        <label>Demo End Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Kit__c</fullName>
        <label>Demo Kit #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Location__c</fullName>
        <inlineHelpText>Please enter the full demo location address</inlineHelpText>
        <label>Demo Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Notes_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo Notes Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Objective__c</fullName>
        <label>Demo Objective/Project Background</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Demo_Set_up_Date__c</fullName>
        <label>Demo Set-up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Set_up_Time_Zone__c</fullName>
        <label>Demo Set-up Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Demo_Set_up_Time__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>EDT</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>CDT</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
                <value>
                    <fullName>MDT</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>PDT</fullName>
                </value>
                <value>
                    <fullName>AKST</fullName>
                </value>
                <value>
                    <fullName>AKDT</fullName>
                </value>
                <value>
                    <fullName>HAST</fullName>
                </value>
                <value>
                    <fullName>HADT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Set_up_Time__c</fullName>
        <label>Demo Set-up Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Start_Date__c</fullName>
        <label>Demo Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Demo_Start_Time_Zone__c</fullName>
        <label>Demo Start Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Demo_Start_Time__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>EDT</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>CDT</fullName>
                </value>
                <value>
                    <fullName>MST</fullName>
                </value>
                <value>
                    <fullName>MDT</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>PDT</fullName>
                </value>
                <value>
                    <fullName>AKST</fullName>
                </value>
                <value>
                    <fullName>AKDT</fullName>
                </value>
                <value>
                    <fullName>HAST</fullName>
                </value>
                <value>
                    <fullName>HADT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demo_Start_Time__c</fullName>
        <label>Demo Start Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6:00 AM</fullName>
                </value>
                <value>
                    <fullName>6:30 AM</fullName>
                </value>
                <value>
                    <fullName>7:00 AM</fullName>
                </value>
                <value>
                    <fullName>7:30 AM</fullName>
                </value>
                <value>
                    <fullName>8:00 AM</fullName>
                </value>
                <value>
                    <fullName>8:30 AM</fullName>
                </value>
                <value>
                    <fullName>9:00 AM</fullName>
                </value>
                <value>
                    <fullName>9:30 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:30 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:30 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>12:30 PM</fullName>
                </value>
                <value>
                    <fullName>1:00 PM</fullName>
                </value>
                <value>
                    <fullName>1:30 PM</fullName>
                </value>
                <value>
                    <fullName>2:00 PM</fullName>
                </value>
                <value>
                    <fullName>2:30 PM</fullName>
                </value>
                <value>
                    <fullName>3:00 PM</fullName>
                </value>
                <value>
                    <fullName>3:30 PM</fullName>
                </value>
                <value>
                    <fullName>4:00 PM</fullName>
                </value>
                <value>
                    <fullName>4:30 PM</fullName>
                </value>
                <value>
                    <fullName>5:00 PM</fullName>
                </value>
                <value>
                    <fullName>5:30 PM</fullName>
                </value>
                <value>
                    <fullName>6:00 PM</fullName>
                </value>
                <value>
                    <fullName>6:30 PM</fullName>
                </value>
                <value>
                    <fullName>7:00 PM</fullName>
                </value>
                <value>
                    <fullName>7:30 PM</fullName>
                </value>
                <value>
                    <fullName>8:00 PM</fullName>
                </value>
                <value>
                    <fullName>8:30 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>